<resources>
    <string name="app_name">WhatsPoppin</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map View</string>
    <string name="menu_eventList">Event List</string>
    <string name="menu_recommendations">Recommendations</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_editPreferences">Edit Preferences</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Log out</string>
    <string name="google_maps_key">AIzaSyAsp1Hy1IAZrQ1o07BOAiVuO2fIHVeWZYU</string>
    <string name="title_activity_maps">Map</string>

    <string name="editPreferences_interest">My Interests</string>
    <string name="editPreferences_location">Show Nearby Events</string>
    <string name="editPreferences_notification">Receive Notifications</string>

    <string name="map_fab_all">All</string>
</resources>
