<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.whatspoppin.ui.home.HomeFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_mapview" />

    <fragment
        android:id="@+id/nav_eventList"
        android:name="com.example.whatspoppin.ui.gallery.GalleryFragment"
        android:label="@string/menu_eventList"
        tools:layout="@layout/fragment_eventlist" />

    <fragment
        android:id="@+id/nav_recommendations"
        android:name="com.example.whatspoppin.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_recommendations"
        tools:layout="@layout/fragment_recommendations" />

    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="com.example.whatspoppin.ui.tools.ToolsFragment"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/nav_editpreferences"
        android:name="com.example.whatspoppin.ui.share.ShareFragment"
        android:label="@string/menu_editPreferences"
        tools:layout="@layout/fragment_editpreferences" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.whatspoppin.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>